updated google url

--- a/suzi/home.html
+++ b/suzi/home.html
@@ -34,6 +34,6 @@
         id="passsword">
     </div>
     <button type="button">SUBMIT</button>
-    <a href="www.google.com">GOOGLE</a>
+    <a href="https://www.google.co.in/">GOOGLE</a>
 </body>
 </html>
