Added h2 tag at line no. 38

--- a/suzi/home.html
+++ b/suzi/home.html
@@ -35,5 +35,6 @@
     </div>
     <button type="button">SUBMIT</button>
     <a href="https://www.google.co.in/">GOOGLE</a>
+    <h2>Hello World fro local</h2>
 </body>
 </html>
