--- a/suzi/home.html
+++ b/suzi/home.html
@@ -36,5 +36,24 @@
     <button type="button">SUBMIT</button>
     <a href="https://www.google.co.in/">GOOGLE</a>
     <span>Hello World</span>
+    <table>
+        <thead>
+            <th>NAME</th>
+            <th>AGE</th>
+            <th>SALARY</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Ali</td>
+                <td>23</td>
+                <td>200000</td>
+            </tr>
+            <tr>
+                <td>Sam</td>
+                <td>14</td>
+                <td>450000</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
